welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:0: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:7: error: not found: value setCouleurBrosee
	setCouleurBrosee(Color.YELLOW)
        ^