welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def Flower(c:Color) {
	setCouleurBrosse(c);
	baisseBrosse();
	leveBrosse();
	avance();
	setCouleurBrosee(Color.YELLOW)
	baisseBrosse();
	leveBrosse();
	avance();
	setCouleurBrosse(c);
	baisseBrosse();
	leveBrosse();
	recule();
	gauche();
	avance();
	setCouleurBrosse(c);
	baisseBrosse();
	leveBrosse();
}
Flower(Color.RED);